# crossroads

./: .gitignore  README.md  http-proxy.conf  pyproject.toml  schema.json
docker/: Dockerfile  docker-compose.yaml  nginx.conf
src/crossroads/: main.py
src/crossroads/templates/: index.html  locations.html  problems.html
src/tests/: fake.json  sample1.json  sample1_not_match.json  sample2.json  sample2_not_match.json  test_data.py  tests.py
terraform/: launch_template.tf  main.tf  variables.tf
terraform/userdata/: userdata.sh
tools/: coordinates_extractor.py
