[tool.poetry]
name = "crossroads"
version = "0.1.0"
description = "This is awesome crossroads project!"
authors = ["kszymans", "czesky"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.4"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
