[tool.poetry]
name = "crossroads"
version = "0.1.0"
description = "This is awesome crossroads project!"
authors = ["kszymans", "czesky"]

[tool.poetry.scripts]
crossroads = "src.crossroads.main:main"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.2.1"
flask = "^1.1.2"
flask-material = "^0.1.1"
flask-wtf = "^0.14.3"
flask-googlemaps = "^0.4.0"
jsonschema = "^3.2.0"
geopy = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
